# clarion

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  app.py  schemas.py  sessions.py
api/middleware/: __init__.py  correlation.py  rate_limit.py
api/routes/: __init__.py  chat.py  cost.py  evaluate.py  health.py  voice.py
clarion/: __init__.py
clarion/agents/: __init__.py  agent.py  cli.py  llm.py  openai_client.py  openai_schema.py  prompt.py  react.py
clarion/config/: __init__.py  loader.py  schema.py  settings.py
clarion/eval/: __init__.py  __main__.py  cli.py
clarion/evaluation/: __init__.py  cli.py  metrics.py  report.py  reporter.py  runner.py  trace_report.py
clarion/modules/: __init__.py  invoice_ocr.py
clarion/modules/no_show_prediction/: __init__.py  dataset.py  metric.py  predictor.py  trainer.py
clarion/modules/pms_writeback/: __init__.py  accuracy.py  extractor.py  writer.py
clarion/modules/voice/: __init__.py  orchestrator.py  stt.py  tts.py
clarion/multiagent/: __init__.py  booking_fastpath.py  router.py  runner.py  state.py  supervisor.py
clarion/multiagent/specialists/: __init__.py  base.py  booking.py  cancel.py  eligibility.py  emergency.py  info.py
clarion/observability/: __init__.py  cost.py  logging.py  tracer.py  writer.py
clarion/pipelines/: __init__.py  ingest.py
clarion/pipelines/structured/: __init__.py  schema.sql  seed.py  store.py
clarion/pipelines/unstructured/: __init__.py  chunker.py
clarion/rag/: __init__.py  builder.py  embeddings.py  retriever.py
clarion/resilience/: __init__.py  circuit_breaker.py  retry.py
clarion/schemas/: __init__.py  domain.py  escalation.py  evaluation.py  judge.py  modules.py  scenarios.py  tasks.py  tools.py
clarion/sentinel/: __init__.py  audit.py  escalation.py  frustration.py  guardrails.py  judge.py  phi.py
clarion/simulator/: __init__.py  cli.py  generator.py  harness.py  templates.py
clarion/tools/: __init__.py  base.py  book_appointment.py  cancel_appointment.py  check_eligibility.py  create_pms_task.py  registry.py  search_slots.py
clarion/voice/: __init__.py
configs/: ophthalmology.yaml  orthopedics.yaml
dashboard/: __init__.py
data/ophthalmology/: report_ophthalmology.json  trace_ophthalmology.json
data/orthopedics/: report_orthopedics.json  trace_orthopedics.json
data/personas/: ophthalmology.json  orthopedics.json
data/rules/ophthalmology/: 01_appointment_types.md  02_new_patient_intake.md  03_dilation_and_prep.md  04_insurance_and_payers.md  05_cancellation_and_reschedule.md  06_emergencies_and_escalation.md
data/rules/orthopedics/: 01_appointment_types.md  02_new_patient_intake.md  03_workers_comp.md  04_insurance_and_payers.md  05_cancellation_and_reschedule.md  (+1 more)
data/seeds/: ophthalmology.json  orthopedics.json
deploy/: cloudrun.yaml  fly.toml  render.yaml
docs/: DEPLOYMENT.md  architecture.mmd  deployment_guide.md  developer_guide.md  discovery.md  interview_business.md  interview_technical.md  release_notes_v1.0.0.md  security_review.md
docs/phase0/: ARCHITECTURE_AUDIT.md  IMPLEMENTATION_PLAN.md  UI_GAP_ANALYSIS.md
docs/screenshots/: README.md
gradio_app/: __init__.py  __main__.py  agent_client.py  app.py  components.py  data.py  data_sources.py  style.css  tab_cost_ocr.py  tab_escalations.py  tab_live_agent.py  tab_quality.py  tab_trace_explorer.py  tab_voice_agent.py  theme.py  voice_client.py
gradio_app/views/: __init__.py  _confirmation.py  agent_flow.py  configuration.py  cost_slo.py  healthcare_ops.py  mission_control.py  patient_360.py  sentinel_ops.py  system_health.py  voice_intel.py
huggingface/: README.md
loadtest/: README.md  in_process_load.py  locustfile.py
reports/live_v0.1.0/: report_ophthalmology.json  report_orthopedics.json  trace_ophthalmology.json  trace_orthopedics.json
reports/v1.0.0/: README.md  ophthalmology.evaluation_report.json  orthopedics.evaluation_report.json
scripts/: build_indices.sh  healthcheck.sh  patch_gradio_client.py  render_architecture.py  serve_all.sh
tests/: test_smoke.py
tests/agents/: conftest.py  test_e2e_guardrails.py  test_e2e_observability.py  test_e2e_ophthalmology.py  test_e2e_orthopedics.py  test_openai_schema.py  test_prompt.py  test_react.py
tests/api/: conftest.py  test_chat.py  test_chat_soft_error.py  test_demo_mode.py  test_evaluate.py  test_health.py  test_rate_limit.py
tests/config/: test_loader.py  test_schema.py
tests/docker/: test_compose.py  test_deployment.py  test_dockerfile.py  test_dockerignore.py
tests/docs/: test_docs.py
tests/evaluation/: test_acceptance.py  test_metrics.py  test_trace_report.py
tests/gradio_app/: test_agent_flow.py  test_components.py  test_data.py  test_data_sources.py  test_healthcare_ops.py  test_sentinel_ops.py  test_tabs.py  test_theme.py  test_views.py  test_voice_intel.py
tests/loadtest/: test_p95_sla.py
tests/modules/: test_no_show_prediction.py  test_pms_writeback.py  test_voice.py
tests/multiagent/: test_booking_fastpath.py  test_emergency_and_supervisor.py  test_graph_integration.py  test_router.py
tests/observability/: test_cost.py  test_logging.py  test_tracer.py  test_writer.py
tests/pipelines/: test_structured_store.py
tests/rag/: test_chunker.py  test_retriever.py  test_retriever_cache.py
tests/resilience/: test_circuit_breaker.py  test_retry.py
tests/sentinel/: test_audit.py  test_clinical_advice.py  test_emergency.py  test_escalation_acceptance.py  test_escalation_scorer.py  test_frustration.py  test_judge.py  test_judge_acceptance.py  test_phi.py
tests/simulator/: test_generator.py  test_harness.py  test_harness_with_judge.py
tests/tools/: conftest.py  test_book_appointment.py  test_cancel_appointment.py  test_check_eligibility.py  test_create_pms_task.py  test_registry.py  test_search_slots.py
