[tool.poetry]
name = "clarion"
version = "0.1.0"
description = "Configurable Multi-Agent Voice Automation Platform with Sentinel Trust Engine"
authors = ["Ranjith200228 <Ranjith200228@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "clarion" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.7"
pydantic-settings = "^2.3"
pyyaml = "^6.0"
# Phase 3 — dual data pipeline (structured + unstructured/RAG)
numpy = "^1.26"
scikit-learn = "^1.5"   # TF-IDF fallback embedder (no API key required)
faiss-cpu = "^1.8"      # vector index for dense embeddings
openai = "^1.40"        # optional embedder (text-embedding-3-small)
# Phase 8 — FastAPI service
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
# Module M3 — no-show prediction trainer + predictor
xgboost = "^2.1"
joblib = "^1.4"

[tool.poetry.group.ui.dependencies]
# Phase 14 — Gradio product UI. Kept in its own optional group so the
# core library doesn't drag in Gradio's transitive deps (fastapi,
# uvicorn, websockets, pydub, etc — many of which we already pin).
gradio = "^4.44"
# gradio 4.44 still imports the legacy ``HfFolder`` from huggingface_hub,
# which was removed in huggingface_hub 1.0. Pin to the last compatible
# 0.x release so the import line in gradio/oauth.py works.
huggingface-hub = ">=0.24,<0.27"
httpx = "^0.27"  # for the Gradio app's FastAPI backend client

[tool.poetry.group.dev.dependencies]
ruff = "^0.6"
pytest = "^8.2"
pytest-cov = "^5.0"
mypy = "^1.10"
pre-commit = "^3.7"
types-pyyaml = "^6.0"
httpx = "^0.27"  # FastAPI TestClient transport

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -------- ruff --------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["clarion", "api", "dashboard", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplifications
    "RUF",           # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -------- mypy --------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
files = ["clarion"]

# -------- pytest --------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: integration tests (deselect with '-m \"not integration\"')",
]
